<resources>
    <string name="app_name">FestivalMate</string>
    <string name="festival_mate">공연메이트</string>
    <string name="login">로그인</string>
    <string name="start">시작하기</string>

    <string name="lets_go_list">갈꺼야 한 목록</string>
    <string name="join_wait_list">메이트톡 대기 목록</string>
    <string name="settings">설정</string>
    <string name="profile_update">프로필 수정</string>
    <string name="profile_update_do">프로필 수정하기</string>


    <string name="name_ment">이름을 입력하세요.</string>
    <string name="state">상태</string>
    <string name="state_ment">자신을 자유롭게 표현해 보세요.</string>
    <string name="location">지역</string>
    <string name="location_ment">지역을 선택하세요.</string>
    <string name="birthday">생년월일</string>
    <string name="birthday_ment">숫자만 입력해주세요.</string>
    /


    <string name="alram">알림</string>
    <string name="alram_ment">ON 하시면 메이트톡 알림 및 공연정보를 받아 볼 수 있습니다.</string>
    <string name="question">문의하기</string>
    <string name="festivalmate_version">공연메이트 버전 정보</string>
    <string name="version">Android V1.001</string>

    <string name="send_mail">보내는 사람</string>
    <string name="question_ment">공연메이트에 대한 궁금사항을 보내주시면 신속히 답변드리겠습니다.</string>

    <string name="prefer_research">선호도 조사</string>
    <string name="prefer_research_ment">좋아하는 가수를 선택하여 메이트를 만들어 보세요.
    </string>
    <string name="jump">건너뛰기</string>
    <string name="complete">완료</string>

    <string name="search_ment">검색을 이용해서 원하는 가수를 선택하세요.</string>
    <string name="search">검색</string>
    <string name="festibal_search">공연검색</string>

    <string name="festival_info">공연정보</string>
    <string name="mate_talk">메이트톡</string>
    <string name="mate_matching">메이트매칭</string>

    <string name="name">이름</string>
    <string name="email">이메일</string>
    <string name="password">비밀번호</string>
    <string name="re_password">비밀번호확인</string>

    <string name="facebook_login">페이스북으로 로그인하기</string>
    <string name="kaokaotalk_login">카카오톡으로 로그인하기</string>
    <string name="email_signup">이메일로 가입하기</string>
    <string name="signup">가입하기</string>


    <string name="title_activity_home"></string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="mate_matching_start">메이트 매칭 시작하기</string>
    <string name="festibal_search_ment">검색을 이용해서 원하는 공연을 찾으세요.</string>
    <string name="mate_matching_do">메이트 매칭하기</string>
    <string name="make_talk">메이트톡 만들기</string>
    <string name="mate_matching_start_ment">좋아하는 가수를 선택하면 나와 같은 취향의 친구들을 만날 수 있어요.</string>
    <string name="festibal">공연</string>

    <string name="mate_talk_room_name">방이름</string>
    <string name="mate_talk_room_name_ment">방이름을 입력하세요.</string>
    <string name="mate_talk_max_people">최대참여인원</string>
    <string name="mate_talk_max_people_ment">2명~20명까지 설정 가능합니다.</string>
    <string name="prefer_location">선호지역</string>
    <string name="prefer_location_ment">선호지역을 선택하세요.</string>
    <string name="prefer_age">선호연령대</string>
    <string name="prefer_age_ment">선호연령대를 선택하세요.</string>
    <string name="background_choice">배경선택</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="lets_go">갈꺼야</string>
    <string name="terms_use_privacy_policy">이용약관 및 개인정보 취급방침</string>
    <string name="agree_terms_use_privacy_policy">서비스 이용약관, 개인정보 방침에 동의합니다.</string>
    <string name="terms_use">이용약관</string>
    <string name="privacy_policy">개인정보 취급방침</string>
    <string name="terms_use_ment"></string>
    <string name="privacy_policy_ment">



    </string>
    <string name="reject">거절</string>
    <string name="approved">승인</string>
    <string name="exile">강퇴</string>
    <string name="approve_waiter">승인대기자</string>
    <string name="chat_joiner">대화참여자</string>
    <string name="logout">로그아웃</string>
    <string name="update_prefer_artist">선호 가수 수정하기</string>
    <string name="prefer_artist">좋아하는 가수</string>
    <string name="update">수정하기</string>
    <string name="cancel_join">신청 취소하기</string>
    <string name="report">신고하기</string>
    <string name="non_matetalk_ment">메이트톡 대화 내역이 없어요.</string>
    <string name="non_matetalk_ment2">메이트 매칭하기를 이용하여</string>
    <string name="non_matetalk_ment3">음악 취향이 같은 친구를 메이트톡으로 만나보세요.</string>
    <string name="clickbg">배경 선택</string>
    <string name="do_edit">수정하기</string>

    <string name="facebook_app_id">1548409195453832</string>
    <string name="join_festival_member">공연메이트가 되어주세요.</string>

</resources>
