<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Preference.PreferenceActivity">

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:background="#ff3300">

        <TextView
            android:text="@string/prefer_research"
            android:textSize="20dp"
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_gravity="left"
            />

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceSmall"
        android:text="@string/prefer_research_ment"
        android:id="@+id/textView"
        android:textColor="#ffffff"
        android:layout_alignBottom="@+id/toolbar"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_search"
        android:textSize="15dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:hint="@string/search_ment"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/search"
        android:id="@+id/btn_search"
        android:layout_alignTop="@+id/edit_search"
        android:layout_toRightOf="@+id/edit_search"
        android:layout_toEndOf="@+id/edit_search" />


</RelativeLayout>
