<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.festival.tacademy.festivalmate.MyPage.ProfileUpdateActivity">


    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:id="@+id/toolbar"
        android:layout_centerInParent="true"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:background="#ff3300">

        <TextView
            android:text="@string/profile_update"
            android:textSize="20dp"
            android:id="@+id/toolbar_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="#ffffff"
            android:layout_gravity="left"
            />
    </android.support.v7.widget.Toolbar>

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/toolbar"
        android:id="@+id/frameLayout">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="나만의 프로필 사진을 설정해 주세요."
            android:id="@+id/textView3"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="fill_parent"
            android:id="@+id/image_profile"
            android:layout_gravity="center" />

        <Button
            style="?android:attr/buttonStyleSmall"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="gallery"
            android:id="@+id/btn_gallery"
            android:layout_gravity="right|bottom" />
    </FrameLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/name"
        android:id="@+id/textView2"
        android:textColor="#ff3300"
        android:layout_below="@+id/frameLayout"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="50dp"
        android:layout_marginLeft="30dp" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_name"
        android:hint="@string/name_ment"
        android:layout_alignTop="@+id/textView2"
        android:layout_toRightOf="@+id/textView2"
        android:layout_alignRight="@+id/edit_state"
        android:layout_alignEnd="@+id/edit_state" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/state"
        android:id="@+id/textView7"
        android:textColor="#ff3300"
        android:layout_below="@+id/edit_name"
        android:layout_alignLeft="@+id/textView2"
        android:layout_alignStart="@+id/textView2" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/edit_state"
        android:layout_below="@+id/edit_name"
        android:hint="@string/state_ment"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_toRightOf="@+id/textView7"
        android:layout_toEndOf="@+id/textView7" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textAppearance="?android:attr/textAppearanceMedium"
        android:text="@string/location"
        android:id="@+id/textView8"
        android:textColor="#ff3300"
        android:layout_below="@+id/edit_state"
        android:layout_alignLeft="@+id/textView7"
        android:layout_alignStart="@+id/textView7" />

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/spinner_location"
        android:entries="@array/city"
        android:spinnerMode="dropdown"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/edit_state"
        android:layout_toRightOf="@+id/textView8"
        android:layout_toEndOf="@+id/textView8" />

    <Button
        style="?android:attr/buttonStyleSmall"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/profile_update_do"
        android:id="@+id/btn_update"
        android:background="#ff3300"
        android:textColor="#ffffff"
        android:paddingLeft="30dp"
        android:paddingRight="30dp"
        android:layout_marginRight="52dp"
        android:layout_marginEnd="52dp"
        android:layout_alignBottom="@+id/rv_list3"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />
    <android.support.v7.widget.RecyclerView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/rv_list3"
        android:layout_alignLeft="@+id/spinner_location"
        android:layout_alignStart="@+id/spinner_location"
        android:layout_below="@+id/spinner_location"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />


</RelativeLayout>
