<?xml version="1.0" encoding="UTF-8"?>

<RelativeLayout
    tools:context=".Preference.PreferenceActivity"
    android:layout_height="match_parent"
    android:background="@color/textf"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.v7.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/color_toolbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:id="@+id/toolbar">

        <TextView
            android:layout_height="wrap_content"
            android:layout_width="wrap_content"
            android:id="@+id/toolbar_title"
            android:layout_marginBottom="23dp"
            android:layout_gravity="left"
            android:textStyle="bold"
            android:textColor="#ffffff"
            android:textSize="18sp"
            android:text="@string/prefer_research"/>

    </android.support.v7.widget.Toolbar>

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:id="@+id/textView"
        android:layout_marginBottom="5dp"
        android:textSize="13sp"
        android:textColor="#ffffff"
        android:text="@string/prefer_research_ment"
        android:layout_marginLeft="17dp"
        android:layout_alignBottom="@+id/toolbar"
        android:textAppearance="?android:attr/textAppearanceSmall"/>

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/edit_search"
        android:singleLine="true"
        android:background="@null"
        android:textSize="12sp"
        android:textColor="@color/text9"
        android:hint="@string/search_ment"
        android:layout_alignTop="@+id/imageView2"
        android:layout_toRightOf="@+id/imageView2"
        android:layout_toEndOf="@+id/imageView2"
        android:layout_marginLeft="10dp" />

    <Button
        android:layout_height="25dp"
        android:layout_width="60dp"
        android:background="@drawable/btn_small"
        android:id="@+id/btn_search"
        android:textColor="#ffffff"
        android:text="@string/search"
        android:layout_alignTop="@+id/edit_search"
        android:layout_toRightOf="@+id/imageView8"
        android:layout_toEndOf="@+id/imageView8"
        android:layout_marginRight="16dp" />

    <android.support.v7.widget.RecyclerView
        android:layout_height="match_parent"
        android:layout_width="match_parent"
        android:id="@+id/rv_list"
        android:layout_below="@+id/btn_search"
        android:layout_marginTop="19dp"
        android:layout_centerHorizontal="true"/>

    <ImageView
        android:layout_height="15dp"
        android:layout_width="15dp"
        android:id="@+id/imageView2"
        android:src="@drawable/image_search"
        android:layout_marginTop="15dp"
        android:layout_below="@+id/toolbar"
        android:layout_alignLeft="@+id/imageView8"
        android:layout_alignStart="@+id/imageView8"
        android:layout_marginLeft="14dp" />

    <Button
        android:layout_height="wrap_content"
        android:layout_width="50dp"
        android:background="@android:color/transparent"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:id="@+id/btn_complete"
        android:textColor="#ffffff"
        android:textStyle="bold"
        android:textSize="15sp"
        android:text="@string/complete"
        android:visibility="gone"
        android:layout_alignParentEnd="true"/>

    <ImageView
        android:background="@drawable/text_bottom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView8"
        android:layout_above="@+id/rv_list"
        android:layout_alignLeft="@+id/textView"
        android:layout_alignStart="@+id/textView"
        android:layout_below="@+id/edit_search"
        android:layout_alignRight="@+id/textView"
        android:layout_alignEnd="@+id/textView"
        android:layout_marginRight="14dp" />

</RelativeLayout>