<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.festival.tacademy.festivalmate.MateTalk.MateTalkFragment">
    <!-- TODO: Update blank fragment layout -->
    <android.support.v7.widget.RecyclerView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/rv_list"
        android:layout_gravity="center_horizontal|top" />

    <FrameLayout
        android:id="@+id/matetalk_size0"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/textf"
        android:visibility="gone"

        android:layout_gravity="center">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"

            android:layout_gravity="center">

            <ImageView
                android:layout_width="121dp"
                android:layout_height="121dp"
                android:src="@drawable/none_img"
                android:id="@+id/imageView6"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="92dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_matetalk_ment"
                android:textSize="20sp"
                android:textColor="#B5B5B5"
                android:id="@+id/textView3"
                android:layout_below="@+id/imageView6"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="20dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/non_matetalk_ment2"
                android:id="@+id/textView12"
                android:textSize="12sp"
                android:textColor="#D4D4D4"
                android:layout_below="@+id/textView3"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="30dp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:text="@string/non_matetalk_ment3"
                android:id="@+id/text_location"
                android:textSize="12sp"
                android:textColor="#D4D4D4"
                android:layout_below="@+id/textView12"
                android:layout_centerHorizontal="true" />
        </RelativeLayout>
    </FrameLayout>

</FrameLayout>
