<?xml version="1.0" encoding="UTF-8"?>

    <RelativeLayout
    tools:context="com.festival.tacademy.festivalmate.login.LoginFragment"
    android:layout_height="match_parent"
    android:layout_width="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android">


    <android.support.v7.widget.Toolbar
        android:layout_height="?attr/actionBarSize"
        android:layout_width="match_parent"
        android:background="@color/color_toolbar"
        android:layout_alignParentRight="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"
        android:id="@+id/toolbar">

    <TextView
        android:layout_height="wrap_content"
        android:layout_width="wrap_content"
        android:id="@+id/toolbar_title"
        android:layout_gravity="center"
        android:textColor="#ffffff"
        android:textSize="25dp"
        android:text="@string/festival_mate"/>

</android.support.v7.widget.Toolbar>


    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/view"
        android:layout_marginTop="57dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/toolbar"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="39dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/edit_email"
        android:paddingLeft="4dp"
        android:inputType="textEmailAddress"
        android:hint="@string/email"/>

</android.support.design.widget.TextInputLayout>


    <android.support.design.widget.TextInputLayout
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/view2"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/view"
        android:layout_marginRight="30dp"
        android:layout_marginLeft="39dp">

    <EditText
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:id="@+id/edit_password"
        android:paddingLeft="4dp"
        android:inputType="textPassword"
        android:hint="@string/password"/>

</android.support.design.widget.TextInputLayout>

    <Button
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:background="@drawable/login_btn_default"
        android:id="@+id/btn_login"
        android:textColor="#ffff"
        android:text="@string/login"
        android:layout_centerHorizontal="true"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"
        android:layout_centerVertical="true"/>

    <Button
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:background="@drawable/login_btn_facebook"
        android:id="@+id/btn_facebook_login"
        android:layout_marginTop="54dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_login"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"/>

    <Button
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:background="@drawable/login_btn_kakao"
        android:id="@+id/btn_kaokaotalk_login"
        android:layout_marginTop="13dp"
        android:layout_below="@+id/btn_facebook_login"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="0dp"
        android:layout_alignStart="@+id/btn_facebook_login"
        android:layout_alignLeft="@+id/btn_facebook_login"/>

    <Button
        android:layout_height="44dp"
        android:layout_width="match_parent"
        android:background="@drawable/login_btn_email"
        android:id="@+id/btn_email_signup"
        android:layout_marginTop="13dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@+id/btn_kaokaotalk_login"
        android:layout_marginRight="16dp"
        android:layout_marginLeft="16dp"/>

</RelativeLayout>